@@ -14,7 +14,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -42,6 +41,6 @@ public class GetFriendListService {
                         .statusMessage(friend.getStatusMessage())
                         .name(friend.getName())
                         .build())
-                .collect(Collectors.toList()));
+                .toList());
     }
 }
